<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- App Heading -->
    <TextView
        android:id="@+id/appHeadingText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/headingBackground"
        android:paddingLeft="16dp"
        android:paddingTop="32dp"
        android:paddingBottom="16dp"
        android:text="@string/hello_games_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Game Info Text -->
    <TextView
        android:id="@+id/gameInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/game_info_text"
        android:textColor="@color/material_dynamic_primary80"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appHeadingText" />

    <!-- Game Image -->
    <ImageView
        android:id="@+id/gameImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoText" />

    <!-- Name: Label -->
    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nameLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gameImage"
        app:layout_constraintTop_toTopOf="@+id/gameImage" />

    <!-- Type: Label -->
    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/typeLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gameImage"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <!-- Nb Players: Label -->
    <TextView
        android:id="@+id/nbPlayersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nbPlayersLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gameImage"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <!-- Year: Label -->
    <TextView
        android:id="@+id/yearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/yearLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gameImage"
        app:layout_constraintTop_toBottomOf="@+id/nbPlayersLabel" />

    <!-- Name: Value -->
    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />

    <!-- Type: Value -->
    <TextView
        android:id="@+id/typeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toTopOf="@+id/typeLabel" />
    
    <!-- Nb Players: Value -->
    <TextView
        android:id="@+id/nbPlayersValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/nbPlayersLabel"
        app:layout_constraintTop_toTopOf="@+id/nbPlayersLabel" />

    <!-- Year: Value -->
    <TextView
        android:id="@+id/yearValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/yearLabel"
        app:layout_constraintTop_toTopOf="@+id/yearLabel" />

    <!-- Description -->
    <TextView
        android:id="@+id/gameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text=""
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameImage" />

    <Button
        android:id="@+id/knowMoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/knowMoreButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>